--- a/setting.css
+++ b/setting.css
@@ -100,12 +100,11 @@ nav > ul > li > a:hover {
 }
 
 main {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
 }
-
+/* 
 footer {
-  position: sticky;
   bottom: 0;
   width: 100%;
   margin-top: 10px;
@@ -115,7 +114,7 @@ footer {
   text-align: center;
   line-height: 1.5;
   opacity: 0.8;
-}
+} */
 
 footer p {
   font-size: 0.8em;
